--- a/deployment/ansible-vitam-extra/roles/gatling/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/gatling/tasks/main.yml
@@ -4,6 +4,10 @@
   package:
     name: vitam-gatling
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   tags: gatling
 
 - name: Copy gatling p12 keystore
@@ -40,4 +44,4 @@
   tags:
     - update_vitam_certificates
     - gatling
-  
+
