--- a/deployment/ansible-vitam-extra/roles/ihm-recette-front/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/ihm-recette-front/tasks/main.yml
@@ -2,5 +2,9 @@
   package:
     name: vitam-ihm-recette-front
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   tags:
     - update_package_vitam
