--- a/deployment/ansible-vitam-extra/roles/metricbeat/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/metricbeat/tasks/main.yml
@@ -4,11 +4,19 @@
   package:
     name: topbeat
     state: absent
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: install metricbeat package
   package:
     name: metricbeat
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: apply metricbeat configuration
   template:
