--- a/deployment/ansible-vitam-extra/roles/packetbeat/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/packetbeat/tasks/main.yml
@@ -4,11 +4,19 @@
   package:
     name: libpcap
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
 - name: install libpcap (prerequisite for Packetbeat)
   package:
     name: libpcap0.8
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "Debian"
 
 # TODO Run packetbeat as a non-root user, using a specific user with full restrictions
@@ -16,6 +24,10 @@
   package:
     name: packetbeat
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: setup Packetbeat configuration file
   template:
