--- a/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
@@ -22,11 +22,19 @@
   package:
     name: "{{ apache_service }}"
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: Ensure mod_ssl is installed (CentOS)
   package:
     name: mod_ssl
     state: present
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
 # TODO: We could use apache2_module of ansible but it is currently flagged as preview
