--- a/deployment/ansible-vitam/roles/cerebro/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/cerebro/tasks/main.yml
@@ -4,6 +4,10 @@
   yum:
     name: java-1.8.0
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
   notify:
     - restart cerebro
@@ -13,6 +17,10 @@
     name: openjdk-8-jre-headless
     state: latest
     default_release: "{{ ansible_distribution_release }}"
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
     - disable_internet_repositories_install == false
@@ -23,6 +31,10 @@
   apt:
     name: openjdk-8-jre-headless
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
     - disable_internet_repositories_install == true
@@ -33,6 +45,10 @@
   package:
     name: vitam-elasticsearch-cerebro
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart cerebro
 
