--- a/deployment/ansible-vitam/roles/consul/tasks/consul_disabled.yml
+++ b/deployment/ansible-vitam/roles/consul/tasks/consul_disabled.yml
@@ -4,6 +4,10 @@
   package:
     name: vitam-consul
     state: absent
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 # For Debian
 - block:
@@ -12,6 +16,10 @@
     package:
       name: resolvconf
       state: absent
+    register: result
+    retries: "{{ packages_install_retries_number }}"
+    until: result | succeeded
+    delay: "{{ packages_install_retries_delay }}"
 
   when: ansible_os_family == "Debian" and ansible_virtualization_type != "docker"
 
@@ -22,6 +30,10 @@
     package:
       name: vitam-resolvconf
       state: absent
+    register: result
+    retries: "{{ packages_install_retries_number }}"
+    until: result | succeeded
+    delay: "{{ packages_install_retries_delay }}"
 
   when: ansible_os_family == "RedHat" and ansible_virtualization_type != "docker"
 
