--- a/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
+++ b/deployment/ansible-vitam/roles/consul/tasks/consul_enabled.yml
@@ -9,6 +9,10 @@
   package:
     name: "{{ consul_service }}"
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart consul
 
@@ -77,6 +81,10 @@
       package:
         name: "resolvconf"
         state: latest
+      register: result
+      retries: "{{ packages_install_retries_number }}"
+      until: result | succeeded
+      delay: "{{ packages_install_retries_delay }}"
 
     - name: Add nameserver entry in /etc/resolvconf/resolv.conf.d/head
       blockinfile:
@@ -102,6 +110,10 @@
       package:
         name: "vitam-resolvconf"
         state: latest
+      register: result
+      retries: "{{ packages_install_retries_number }}"
+      until: result | succeeded
+      delay: "{{ packages_install_retries_delay }}"
 
     - name: Start the vitam-resolvconf service
       systemd:
