--- a/deployment/ansible-vitam/roles/curator/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/curator/tasks/main.yml
@@ -5,11 +5,19 @@
   package:
     name: python-elasticsearch-curator
     state: absent
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: install elasticsearch-curator package
   package:
     name: elasticsearch-curator
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   # when: "inventory_hostname != 'localhost'"
 
 - name: ensure Curator directories exist
