--- a/deployment/ansible-vitam/roles/functional_administration/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/functional_administration/tasks/main.yml
@@ -4,6 +4,10 @@
   package:
     name: curl
     state: present
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: Copy the functional_administration reconstruction script
   template:
