--- a/deployment/ansible-vitam/roles/kibana/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/kibana/tasks/main.yml
@@ -24,6 +24,10 @@
   package:
     name: vitam-kibana
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart kibana
 
