--- a/deployment/ansible-vitam/roles/logbook/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logbook/tasks/main.yml
@@ -6,6 +6,10 @@
   package:
     name: curl
     state: present
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: Copy the logbook reconstruction script
   template:
@@ -26,7 +30,7 @@
     group: "{{ vitam_defaults.users.group }}"
     mode: "{{ vitam_defaults.folder.conf_permission }}"
   tags:
-    - update_vitam_configuration  
+    - update_vitam_configuration
 
 - name: Make sure logbook reconstruction timer is enabled
   systemd:
