--- a/deployment/ansible-vitam/roles/metadata/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/metadata/tasks/main.yml
@@ -4,6 +4,10 @@
   package:
     name: curl
     state: present
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: Ensure computegraph.sh is absent
   file:
@@ -30,7 +34,7 @@
     group: "{{ vitam_defaults.users.group }}"
     mode: "{{ vitam_defaults.folder.conf_permission }}"
   tags:
-    - update_vitam_configuration  
+    - update_vitam_configuration
 
 - name: Ensure vitam-metadata-reconstruction timer is stopped
   systemd:
