--- a/deployment/ansible-vitam/roles/mongoc/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongoc/tasks/main.yml
@@ -3,6 +3,10 @@
   package:
     name: vitam-mongoc
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart mongoc
 
