--- a/deployment/ansible-vitam/roles/normalize-host/tasks/centos.yml
+++ b/deployment/ansible-vitam/roles/normalize-host/tasks/centos.yml
@@ -5,6 +5,10 @@
   package:
     name: epel-release
     state: present
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
   when:
     - disable_internet_repositories_install == false
     - vitam.ingestexternal.antivirus == 'clamav'
