--- a/deployment/ansible-vitam/roles/syslogd/tasks/syslogng.yml
+++ b/deployment/ansible-vitam/roles/syslogd/tasks/syslogng.yml
@@ -5,6 +5,10 @@
   package:
     name: syslog-ng
     state: latest
+  register: result
+  retries: "{{ packages_install_retries_number }}"
+  until: result | succeeded
+  delay: "{{ packages_install_retries_delay }}"
 
 - name: ensure service is started on boot && restart service
   service:
