--- a/deployment/ansible-vitam-extra/roles/docker/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/docker/tasks/main.yml
@@ -49,11 +49,19 @@
   - name: run apt-update
     apt:
       update_cache: yes
+    register: result
+    retries: "{{ packages_install_retries_number }}"
+    until: result | succeeded
+    delay: "{{ packages_install_retries_delay }}"
 
   - name: installer docker & pip
     apt:
       name: "{{ item }}"
       state: latest
+    register: result
+    retries: "{{ packages_install_retries_number }}"
+    until: result | succeeded
+    delay: "{{ packages_install_retries_delay }}"
     with_items:
       - docker-ce
       - python-pip
