Add computeInheritedRules Workflow

--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -108,3 +108,4 @@ permissionsWithoutPersonalCertificate:
   - 'batchreport:id:read'
   - 'preservationreport:id:read'
   - 'logbookoperations:create'
+  - 'computeInheritedRules:action'
