--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -169,6 +169,7 @@
         <maven.dependency.version>3.1.1</maven.dependency.version>
         <maven.site.version>3.5.1</maven.site.version>
         <maven.assembly.version>3.1.1</maven.assembly.version>
+        <maven.exec.version>1.6.0</maven.exec.version>
         <maven.failsafe.version>2.19.1</maven.failsafe.version>
         <maven.javadoc.version>2.10.4</maven.javadoc.version>
         <xalan.version>2.7.2</xalan.version>
