Item 5820 : Batch update ontologies

--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -343,6 +343,11 @@ vitam:
         jvm_log: false
         performance_logger: "false"
         reconstruction:
+
+        # Ontology cache settings
+        ontologyCacheMaxEntries: 100
+        ontologyCacheTimeoutInSeconds: 300
+
     processing:
         vitam_component: processing
         host: "processing.service.{{ consul_domain }}"
