--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -1,5 +1,9 @@
 workspaceUrl: http://workspace.service.consul:8201/
 
+# Ontology cache settings
+ontologyCacheMaxEntries: 100
+ontologyCacheTimeoutInSeconds: 300
+
 # Configuration MongoDB
 mongoDbNodes:
 - dbHost: localhost
