Last part for index indexationDate

--- a/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
+++ b/sources/metadata/metadata-core/src/main/resources/unit-es-mapping.json
@@ -1455,19 +1455,46 @@
       },
       "_computedInheritedRules": {
         "properties": {
-          "AccessRule": {
-            "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+          "indexationDate": {
+            "type": "date",
+            "format": "strict_date_optional_time"
+          },
+          "GlobalProperties": {
+            "dynamic_templates": [
+              {
+                "object": {
+                  "match_mapping_type": "object",
+                  "mapping": {
+                    "type": "object"
                   }
                 }
+              }
+            ]
+          },
+          "AccessRule": {
+            "properties": {
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
               },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
+                  }
+                }
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1476,17 +1503,28 @@
           },
           "AppraisalRule": {
             "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
+              },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
                   }
                 }
-              },
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1495,17 +1533,28 @@
           },
           "DisseminationRule": {
             "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
+              },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
                   }
                 }
-              },
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1514,17 +1563,28 @@
           },
           "ReuseRule": {
             "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
+              },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
                   }
                 }
-              },
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1533,17 +1593,28 @@
           },
           "StorageRule": {
             "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
+              },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
                   }
                 }
-              },
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1552,17 +1623,28 @@
           },
           "ClassificationRule": {
             "properties": {
-              "Rules": {
-                "properties": {
-                  "MaxEndDate": {
-                    "type": "date",
-                    "format": "strict_date_optional_time"
-                  },
-                  "Id": {
-                    "type": "keyword"
+              "Properties": {
+                "dynamic_templates": [
+                  {
+                    "object": {
+                      "match_mapping_type": "object",
+                      "mapping": {
+                        "type": "object"
+                      }
+                    }
+                  }
+                ]
+              },
+              "dynamic_templates": [
+                {
+                  "object": {
+                    "match_mapping_type": "object",
+                    "mapping": {
+                      "type": "object"
+                    }
                   }
                 }
-              },
+              ],
               "MaxEndDate": {
                 "type": "date",
                 "format": "strict_date_optional_time"
@@ -1577,7 +1659,6 @@
       "_implementationVersion": {
         "type": "keyword"
       }
-
     }
   }
 }
