--- a/vitam-conf-dev/conf/worker/vitam.conf
+++ b/vitam-conf-dev/conf/worker/vitam.conf
@@ -19,3 +19,7 @@ reclassificationMaxGuildListSizeInLogbookOperation: 1000
 classificationLevel :
   allowList :  [Secret Défense, Confidentiel Défense, Non protégé]
   authorizeNotDefined: true
+
+indexInheritedRulesWithAPIV2OutputByTenant: ["0", "1", "2"]
+indexInheritedRulesWithRulesIdByTenant: ["0", "1", "2"]
+
