--- a/vitam-conf-dev/conf/worker/worker.conf
+++ b/vitam-conf-dev/conf/worker/worker.conf
@@ -10,3 +10,6 @@ urlWorkspace: http://workspace.service.consul:8201/
 jettyConfig: jetty-config.xml
 #Configuration parallele
 capacity: 1
+# Configuration for workflow computeInheritedRules
+indexInheritedRulesWithAPIV2OutputByTenant: ["0", "1", "2"]
+indexInheritedRulesWithRulesIdByTenant: ["0", "1", "2"]
