Add publication packaging

--- a/packaging/pom.xml
+++ b/packaging/pom.xml
@@ -22,7 +22,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy-dependencies</id>
+						<id>copy-dependencies-rpm-signed</id>
 						<phase>process-resources</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
@@ -31,6 +31,36 @@
 							<includeGroupIds>fr.gouv.vitam</includeGroupIds>
 							<includeTypes>rpm</includeTypes>
 							<outputDirectory>${basedir}/rpm_signed/vitam-product/</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-dependencies-rpm</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeGroupIds>fr.gouv.vitam</includeGroupIds>
+							<includeTypes>rpm</includeTypes>
+							<outputDirectory>${basedir}/../rpm/vitam-product/target/</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-dependencies-deb</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeGroupIds>fr.gouv.vitam</includeGroupIds>
+							<includeTypes>deb</includeTypes>
+							<outputDirectory>${basedir}/../deb/vitam-product/target/</outputDirectory>
 							<overWriteReleases>false</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
 							<overWriteIfNewer>true</overWriteIfNewer>
@@ -46,7 +76,7 @@
 					<!-- rpm -->
 					<execution>
 						<id>Build native vitam-product rpm</id>
-						<phase>process-resources</phase>
+						<phase>validate</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -56,7 +86,7 @@
 					</execution>
 					<execution>
 						<id>Get native vitam-external rpm</id>
-						<phase>process-resources</phase>
+						<phase>validate</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -64,10 +94,38 @@
 							<executable>../rpm/vitam-external/build_repo.sh</executable>
 						</configuration>
 					</execution>
+					<execution>
+						<id>create yum repodata for vitam-external</id>
+						<phase>test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/createrepo</executable>
+							<arguments>
+            					<argument>.</argument>
+							</arguments>
+							<workingDirectory>../rpm/vitam-external/target/</workingDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>create yum repodata for vitam-product</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/createrepo</executable>
+							<arguments>
+            					<argument>.</argument>
+							</arguments>
+							<workingDirectory>../rpm/vitam-product/target/</workingDirectory>
+						</configuration>
+					</execution>
 					<!-- debian -->
 					<execution>
 						<id>Build native vitam-product deb</id>
-						<phase>process-resources</phase>
+						<phase>validate</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -77,7 +135,7 @@
 					</execution>
 					<execution>
 						<id>Get native vitam-external deb</id>
-						<phase>process-resources</phase>
+						<phase>validate</phase>
 						<goals>
 							<goal>exec</goal>
 						</goals>
@@ -85,6 +143,76 @@
 							<executable>../deb/vitam-external/build_repo.sh</executable>
 						</configuration>
 					</execution>
+					<!-- debian Packages -->
+					<execution>
+						<id>Create Packages for vitam-external</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/dpkg-scanpackages</executable>
+							<arguments>
+            					<argument>-m</argument>
+								<argument>.</argument>
+							</arguments>
+							<workingDirectory>../deb/vitam-external/target/</workingDirectory>
+							<outputFile>../deb/vitam-external/target/Packages</outputFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>vitam-external deb Packages.gz</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/gzip</executable>
+							<arguments>
+            					<argument>-9c</argument>
+								<argument>Packages</argument>
+							</arguments>
+							<workingDirectory>../deb/vitam-external/target/</workingDirectory>
+							<outputFile>../deb/vitam-external/target/Packages.gz</outputFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>Create Packages for vitam-product</id>
+						<phase>test</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/dpkg-scanpackages</executable>
+							<arguments>
+            					<argument>-m</argument>
+								<argument>.</argument>
+							</arguments>
+							<workingDirectory>../deb/vitam-product/target/</workingDirectory>
+							<outputFile>../deb/vitam-product/target/Packages</outputFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>vitam-product deb Packages.gz</id>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>/usr/bin/gzip</executable>
+							<arguments>
+            					<argument>-9c</argument>
+								<argument>Packages</argument>
+								<!-- <argument>| gzip -9c  &gt; Packages.gz</argument> -->
+							</arguments>
+							<workingDirectory>../deb/vitam-product/target/</workingDirectory>
+							<outputFile>../deb/vitam-product/target/Packages.gz</outputFile>
+						</configuration>
+					</execution>
+
+
+
+
 					<!-- remove useless & dangerous configuration -->
 					<execution>
 						<id>Remove vitam certificates</id>
@@ -170,6 +298,7 @@
 							<descriptors>
 								<descriptor>${basedir}/assembly-prod.xml</descriptor>
 								<descriptor>${basedir}/assembly-horsprod.xml</descriptor>
+								<descriptor>${basedir}/assembly-publication.xml</descriptor>
 								<descriptor>${basedir}/assembly-deployment.xml</descriptor>
 								<descriptor>${basedir}/assembly-prod-signed.xml</descriptor>
 							</descriptors>
